MCR-2959 property overview gui (#1951)
* MCR-2959 property overview gui

* MCR-2959 do not use commons-io

* MCR-2959 fixed issues from review. Fixed bug.

* replaced MCRProperty Class with record
* iterate with entrySet instead of keys and search
* fixed a bug where multiple property interpolations in a single property file would only show the string in the last interpolation
* reused logic from MCRProperties and MCRConfigurationInputStream
* changed api of MCRConfigurationInputStream#getConfigFileContents to also return the component
* added property MCR.Servlet.MCRPropertyHelperContentServlet.Disabled=true to disable this feature by default

* MCR-2959 catch exception

* MCR-2959 added newline at end of file

* MCR-2959 add missing empty lines at the end of file

---------

Co-authored-by: Kathleen Neumann <neumann@gbv.de>